<resources>
    <string name="app_name">ZEPETO</string>
    <string name="post_kr">게시</string>
    <string name="complete_story_kr">이야기를 완성하세요</string>
    <string name="tag_member_kr">멤버 태그</string>
    <string name="add_kr">추가</string>
    <string name="pose_tag_kr">포즈 태그</string>
    <string name="world_tag_kr">월드 태그</string>
    <string name="allow_comment_kr">댓글 허용</string>
    <string name="complete_kr">완료</string>
    <string name="make_kr">만들기</string>
    <string name="my_upper">MY</string>
    <string name="hot_upper">HOT</string>
    <string name="new_upper">NEW</string>
    <string name="template_kr">템플렛</string>
    <string name="couple_kr">커플</string>
    <string name="photo">Photo</string>
    <string name="challenge_kr">챌린지</string>
    <string name="stylish_kr">스타일리쉬</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_contents_kr">더보기</string>
    <string name="upload_kr">업로드</string>
    <string name="dummy_string">더미 스트링</string>
    <string name="view_more">더보기...</string>
</resources>